New typefind system: bytestream is now part of the core all plugins have been modified to use this new typefind syste...
Original commit message from CVS:
New typefind system:
* bytestream is now part of the core
* all plugins have been modified to use this new typefind system
* asf typefinding added
* mpeg video stream typefiding removed because it's broken
* duplicate typefind entries removed
* extra id3 typefinding added, because we've seen 4 types of files
(riff/wav, flac, vorbis, mp3) with id3 headers and each of these needs
to work. Instead, I've added an id3 element and let it redo typefiding
after the id3 header. this needs a hack because spider only typefinds
once. We can remove this hack once spider supports multiple typefinds.
* with all this, mp3 typefinding is semi-rewritten
* id3 typefinding in flac/vorbis is removed, it's no longer needed
* fixed spider and gst-typefind to use this, too.
* Other general cleanups

--- a/gstreamer/gst/Makefile.am
+++ b/gstreamer/gst/Makefile.am
@@ -16,13 +16,13 @@ GST_LOADSAVE_SRC = gstxml.c
 endif
 
 if GST_DISABLE_TYPEFIND
-GST_TYPEFIND_SRC = 
+GST_TYPEFIND_SRC =
 else
 GST_TYPEFIND_SRC = gsttypefind.c
 endif
 
 if GST_DISABLE_AUTOPLUG
-GST_AUTOPLUG_SRC = 
+GST_AUTOPLUG_SRC =
 GST_AUTOPLUG_DIRS =
 else
 GST_AUTOPLUG_SRC = gstautoplug.c
@@ -91,11 +91,12 @@ libgstreamer_@GST_MAJORMINOR@_la_SOURCES =		\
 	gstmarshal.c		\
 	$(GST_ENUMTYPES_SRC)	\
 	gstobject.c		\
-	$(GST_AUTOPLUG_SRC)	\
 	gstatomic.c		\
+	$(GST_AUTOPLUG_SRC)	\
 	gstbin.c		\
 	gstbuffer.c		\
 	gstbufferpool-default.c	\
+	gstbytestream.c		\
 	gstcaps.c		\
 	gstclock.c		\
 	gstcpu.c		\
@@ -157,6 +158,7 @@ gst_headers =			\
 	gstbin.h		\
 	gstbuffer.h		\
 	gstbufferpool-default.h \
+	gstbytestream.h		\
 	gstcaps.h		\
 	gstclock.h		\
 	gstcompat.h		\
