renaming base documentation names
Original commit message from CVS:
renaming base documentation names

--- a/gstreamer/docs/faq/Makefile.am
+++ b/gstreamer/docs/faq/Makefile.am
@@ -1,7 +1,7 @@
 ### this is the part you can customize if you need to
 
 # base name of doc
-DOC = gstreamer-faq
+DOC = faq
 
 # main xml file
 MAIN = $(DOC).xml
