--- a/gstreamer/docs/manual/.gitignore
+++ b/gstreamer/docs/manual/.gitignore
@@ -1,14 +1,9 @@
 Makefile
 Makefile.in
-*.bak
 *.png
+*.fig
 .deps
-images
-gstreamer-manual
-gstreamer-manual.pdf
-gstreamer-manual.ps
-gstreamer-manual.dvi
-gstreamer-manual.tex
-gstreamer-manual.log
-gstreamer-manual.aux
-gstreamer-manual.junk
+build
+html
+*.pdf
+*.ps
