--- a/gstreamer/tests/old/testsuite/debug/Makefile.am
+++ b/gstreamer/tests/old/testsuite/debug/Makefile.am
@@ -1,4 +1,5 @@
-testprogs = global output commandline category
+#testprogs = global output commandline category
+testprogs = commandline category
 
 TESTS = $(testprogs)
 
