--- a/gstreamer/tests/old/testsuite/threads/Makefile.am
+++ b/gstreamer/tests/old/testsuite/threads/Makefile.am
@@ -1,8 +1,8 @@
 TOP_BUILDDIR=$(shell cd $(top_builddir) && pwd)
 TESTS_ENVIRONMENT = GST_PLUGIN_PATH=$(TOP_BUILDDIR) GST_REGISTRY=$(TOP_BUILDDIR)/testsuite/test-registry.xml
 
-testprogs = thread1 thread2 thread3 thread5
-testsfailing = threadb threadc threadd threade threadf thread4 queue
+testprogs = thread1 thread2 thread5
+testsfailing = threadb threadc threadd threade threadf thread4 queue thread3
 
 TESTS = $(testprogs)
 
