upload cvs docs as well
Original commit message from CVS:
upload cvs docs as well

--- a/gstreamer/docs/Makefile.am
+++ b/gstreamer/docs/Makefile.am
@@ -18,6 +18,9 @@ EXTRA_DIST = \
 	slides manuals.mak htmlinstall.mak \
 	image-png image-pdf image-eps version.entities.in
 
+upload:
+	for a in manual pwg faq; do cd $$a; make upload; cd ..; done
+
 dist-hook:
 	$(RM) -rf $(distdir)/random/CVS
 	$(RM) -rf $(distdir)/random/*~
