--- a/gstreamer/gst/parse/Makefile.am
+++ b/gstreamer/gst/parse/Makefile.am
@@ -2,6 +2,7 @@
 noinst_LTLIBRARIES = libgstparse.la
 
 
+CLEANFILES = grammar.tab.h grammar.output
 EXTRA_DIST = grammar.y parse.l types.h
 
 BUILT_SOURCES = grammar.tab.h grammar.tab.c lex._gst_parse_yy.c 
@@ -22,7 +23,3 @@ lex._gst_parse_yy.c: parse.l
 ## this dir needs gstmarshal.h generated
 ../gstmarshal.h:
 	cd .. && $(MAKE) gstmarshal.h
-
-distclean-local:
-	rm -f grammar.output grammar.tab.h
-
