--- a/gst-plugins-bad/gst-libs/gst/mixer/Makefile.am
+++ b/gst-plugins-bad/gst-libs/gst/mixer/Makefile.am
@@ -1,10 +1,15 @@
+libgstinterfacesincludedir = \
+	$(includedir)/gstreamer-@GST_MAJORMINOR@/gst/mixer
+
+libgstinterfacesinclude_HEADERS = \
+	mixer.h \
+	mixertrack.h
+
 lib_LTLIBRARIES = libgstmixer.la
 
-libgstmixer_la_SOURCES = mixer.c
-
-libgstmixerincludedir = $(includedir)/gstreamer-@GST_MAJORMINOR@/gst/mixer
-libgstmixerinclude_HEADERS = mixer.h
-
-libgstmixer_la_LIBADD =
+libgstmixer_la_SOURCES = \
+	mixer.c \
+	mixertrack.c
+libgstmixer_la_LIBADD = 
 libgstmixer_la_CFLAGS = $(GST_CFLAGS) $(GST_OPT_CFLAGS)
 libgstmixer_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
