Some interface implementations for video4linux/video4linux2 plugins: a Tuner interface, with which one can select inp...
Original commit message from CVS:
Some interface implementations for video4linux/video4linux2 plugins:
* a Tuner interface, with which one can select inputs and stations. Audio
work is underway here, but unfinished.
* A Xoverlay interface with which one can do simple overlay. Similar to
the API of the v4l/Xv XFree86 extension. Widget implementation for
GTK-2.0 coming up in the sandbox.
* Colorbalance - for adapting colors (brightness, contrast, etc.) - pretty
basic and maybe somewhat overdesigned. But it'll do for now.

Apart from these interfaces, there's also a loadable library 'xwindowlistener'
that listenes to X for the movement of a window and the overlap of other
windows. This is partly copied from xawtv (and thus partly GPL :(), but it's
needed for the xoverlay interface implementation in the v4l/v4l2 elements.

Lastly, some small changes to remove redundant properties from the v4l/v4l2
elements since these can be done much simpler. Comments appreciated!

--- a/gst-plugins-base/gst-libs/gst/Makefile.am
+++ b/gst-plugins-base/gst-libs/gst/Makefile.am
@@ -4,10 +4,20 @@ else
 GCONF_DIR=
 endif
 
-SUBDIRS = audio idct resample riff floatcast \
-		$(GCONF_DIR) media-info mixer \
-		navigation play video
+if USE_XFREE
+X_DIR=xwindowlistener
+else
+X_DIR=
+endif
 
-DIST_SUBDIRS = audio idct resample riff floatcast \
-		gconf media-info mixer navigation \
-		play video
+SUBDIRS = audio colorbalance floatcast \
+		$(GCONF_DIR) idct media-info \
+		mixer navigation play \
+		resample riff tuner video \
+		xoverlay $(X_DIR)
+
+DIST_SUBDIRS = audio colorbalance floatcast \
+		gconf idct media-info \
+		mixer navigation play \
+		resample riff tuner video \
+		xoverlay xwindowlistener
