--- a/gst-plugins-bad/gst-libs/gst/Makefile.am
+++ b/gst-plugins-bad/gst-libs/gst/Makefile.am
@@ -4,10 +4,20 @@ else
 GCONF_DIR=
 endif
 
-SUBDIRS = audio idct resample riff floatcast \
-		$(GCONF_DIR) media-info mixer \
-		navigation play video
+if USE_XFREE
+X_DIR=xwindowlistener
+else
+X_DIR=
+endif
 
-DIST_SUBDIRS = audio idct resample riff floatcast \
-		gconf media-info mixer navigation \
-		play video
+SUBDIRS = audio colorbalance floatcast \
+		$(GCONF_DIR) idct media-info \
+		mixer navigation play \
+		resample riff tuner video \
+		xoverlay $(X_DIR)
+
+DIST_SUBDIRS = audio colorbalance floatcast \
+		gconf idct media-info \
+		mixer navigation play \
+		resample riff tuner video \
+		xoverlay xwindowlistener
