--- a/gst-plugins-base/testsuite/autoplug/Makefile.am
+++ b/gst-plugins-base/testsuite/autoplug/Makefile.am
@@ -1,9 +1,10 @@
-testprogs = autoplug ## autoplug3 ## autoplug4 # autoplug2
 
-TESTS = $(testprogs)
+# none work currently
+TESTS =
 
-check_PROGRAMS = $(testprogs)
+check_PROGRAMS = autoplug autoplug2 autoplug3 autoplug4
 
 # we have nothing but apps here, we can do this safely
 LIBS = $(GST_LIBS)
 AM_CFLAGS = $(GST_CFLAGS)
+
