--- a/gst-plugins-base/tests/old/Makefile.am
+++ b/gst-plugins-base/tests/old/Makefile.am
@@ -9,10 +9,10 @@ DIST_SUBDIRS=autoplug spider alsa
 
 GST_PLUGIN_PATH=$(shell cd $(top_builddir) && pwd)
 
-$(TESTS):
-	@echo -e '\nrunning gst-register...\n'
-	$(GST_TOOLS_DIR)/gst-register --gst-plugin-path=$(GST_PLUGIN_PATH)
+#$(TESTS):
+#	@echo -e '\nrunning gst-register...\n'
+#	$(GST_TOOLS_DIR)/gst-register --gst-plugin-path=$(GST_PLUGIN_PATH)
 
-TESTS=$(GST_TOOLS_DIR)/gst-compprep
+#TESTS=$(GST_TOOLS_DIR)/gst-compprep
 
 .PHONY: $(TESTS)
