add some linguas
Original commit message from CVS:
add some linguas

--- a/gstreamer/configure.ac
+++ b/gstreamer/configure.ac
@@ -41,7 +41,7 @@ AS="${CC}"
 
 dnl AC_PROC_INTLTOOL([0.26])
 dnl AM_GNU_GETTEXT([external])
-ALL_LINGUAS="de"
+ALL_LINGUAS="de es no nl"
 GETTEXT_PACKAGE=gstreamer-$GST_VERSION_MAJOR.$GST_VERSION_MINOR
 AC_SUBST(GETTEXT_PACKAGE)
 AC_DEFINE_UNQUOTED([GETTEXT_PACKAGE],"$GETTEXT_PACKAGE",[gettext package name])
