--- a/gstreamer/tests/old/testsuite/bytestream/Makefile.am
+++ b/gstreamer/tests/old/testsuite/bytestream/Makefile.am
@@ -1,11 +1,8 @@
-## filterdir = $(libdir)/gst
+include ../Rules
 
-testprogs = test1 
+tests_pass =
+tests_fail = test1 
 
-check_PROGRAMS = $(testprogs)
+test1_SOURCES = test1.c gstbstest.c
 
-test1_SOURCES = test1.c gstbstest.c mem.c
-test1_CFLAGS = $(GST_CFLAGS)
-test1_LDFLAGS = $(GST_LIBS) -L$(top_builddir)/libs/gst/bytestream/ -lgstbytestream
 
-noinst_HEADERS = mem.h
