--- a/gstreamer/tests/old/testsuite/plugin/Makefile.am
+++ b/gstreamer/tests/old/testsuite/plugin/Makefile.am
@@ -1,13 +1,10 @@
-TESTS_ENVIRONMENT = GST_PLUGIN_PATH=$(top_builddir) GST_REGISTRY=$(top_builddir)/testsuite/test-registry.xml
+include ../Rules
 
-plugindir = $(libdir)/gstreamer-@GST_MAJORMINOR@
 plugin_LTLIBRARIES = libtestplugin.la libtestplugin2.la
 
-# FIXME : tests need fixing
-testprogs = static dynamic linked loading registry static2
+tests_pass = static dynamic static2 linked loading registry
+tests_fail = 
 
-AM_CFLAGS = $(GST_CFLAGS)
-LIBS = $(GST_LIBS)
 
 libtestplugin_la_SOURCES = testplugin.c
 libtestplugin_la_CFLAGS = $(GST_CFLAGS)
@@ -19,11 +16,4 @@ libtestplugin2_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 linked_LIBS = libtestplugin.la libtestplugin2.la
 
 static_SOURCES = static.c testplugin_s.c testplugin2_s.c
-
-check_PROGRAMS = $(testprogs)
-
-TESTS = $(top_builddir)/tools/gst-register $(testprogs)
-
-# override to _not_ install the test plugins
-install-pluginLTLIBRARIES:
 
