--- a/gstreamer/tests/old/testsuite/states/Makefile.am
+++ b/gstreamer/tests/old/testsuite/states/Makefile.am
@@ -1,11 +1,8 @@
-GST_PLUGIN_PATH=$(shell cd $(top_builddir) && pwd)
-TESTS_ENVIRONMENT = GST_PLUGIN_PATH=$(GST_PLUGIN_PATH) GST_REGISTRY=$(GST_PLUGIN_PATH)/testsuite/test-registry.xml
+include ../Rules
 
-testprogs = locked
+tests_pass = locked
+tests_fail = 
 
-TESTS = $(testprogs)
-
-check_PROGRAMS = $(testprogs)
 
 locked_LDADD = $(GST_LIBS) 
 locked_CFLAGS = $(GST_CFLAGS) $(GNOME_CFLAGS) $(XML_CFLAGS)
