--- a/gstreamer/tests/old/testsuite/debug/Makefile.am
+++ b/gstreamer/tests/old/testsuite/debug/Makefile.am
@@ -1,10 +1,5 @@
-#testprogs = global output commandline category
-testprogs = commandline category
+include ../Rules
 
-TESTS = $(testprogs)
+tests_pass = commandline category global output
+tests_fail = 
 
-check_PROGRAMS = $(testprogs)
-
-# we have nothing but apps here, we can do this safely
-LIBS = $(GST_LIBS)
-AM_CFLAGS = $(GST_CFLAGS)
