--- a/gstreamer/testsuite/caps/Makefile.am
+++ b/gstreamer/testsuite/caps/Makefile.am
@@ -1,27 +1,30 @@
-TOP_BUILDDIR=$(shell cd $(top_builddir) && pwd)
-TESTS_ENVIRONMENT = GST_PLUGIN_PATH=$(TOP_BUILDDIR) GST_REGISTRY=$(TOP_BUILDDIR)/testsuite/test-registry.xml
+include ../Rules
 
-testprogs = intersection compatibility normalisation union string-conversions fixed intersect2
 
-# we run gst-register here, which is a HACK to generate the test registry
-# before we actually run the real tests
-# a better fix is welcome :)
-TESTS = $(top_builddir)/tools/gst-register $(testprogs)
+tests_pass = \
+	intersection \
+	compatibility \
+	normalisation \
+	union \
+	string-conversions \
+	fixed \
+	intersect2
 
-check_PROGRAMS = $(testprogs)
+tests_fail =
+
 
 intersection_LDADD = $(GST_LIBS) 
-intersection_CFLAGS = $(GST_CFLAGS) $(GNOME_CFLAGS) $(XML_CFLAGS)
+intersection_CFLAGS = $(GST_CFLAGS) $(XML_CFLAGS)
 compatibility_LDADD = $(GST_LIBS) 
-compatibility_CFLAGS = $(GST_CFLAGS) $(GNOME_CFLAGS) $(XML_CFLAGS)
+compatibility_CFLAGS = $(GST_CFLAGS) $(XML_CFLAGS)
 normalisation_LDADD = $(GST_LIBS) 
-normalisation_CFLAGS = $(GST_CFLAGS) $(GNOME_CFLAGS) $(XML_CFLAGS)
+normalisation_CFLAGS = $(GST_CFLAGS) $(XML_CFLAGS)
 union_LDADD = $(GST_LIBS) 
-union_CFLAGS = $(GST_CFLAGS) $(GNOME_CFLAGS) $(XML_CFLAGS)
+union_CFLAGS = $(GST_CFLAGS) $(XML_CFLAGS)
 string_conversions_LDADD = $(GST_LIBS) 
-string_conversions_CFLAGS = $(GST_CFLAGS) $(GNOME_CFLAGS) $(XML_CFLAGS)
+string_conversions_CFLAGS = $(GST_CFLAGS) $(XML_CFLAGS)
 fixed_LDADD = $(GST_LIBS) 
-fixed_CFLAGS = $(GST_CFLAGS) $(GNOME_CFLAGS) $(XML_CFLAGS)
+fixed_CFLAGS = $(GST_CFLAGS) $(XML_CFLAGS)
 intersect2_LDADD = $(GST_LIBS) 
-intersect2_CFLAGS = $(GST_CFLAGS) $(GNOME_CFLAGS) $(XML_CFLAGS)
+intersect2_CFLAGS = $(GST_CFLAGS) $(XML_CFLAGS)
 
