--- a/gstreamer/testsuite/cleanup/Makefile.am
+++ b/gstreamer/testsuite/cleanup/Makefile.am
@@ -1,20 +1,10 @@
-TOP_BUILDDIR=$(shell cd $(top_builddir) && pwd)
-TESTS_ENVIRONMENT = GST_PLUGIN_PATH=$(TOP_BUILDDIR) GST_REGISTRY=$(TOP_BUILDDIR)/testsuite/test-registry.xml
+include ../Rules
 
-if BUILD_FAILING_TESTS
-FAILING = cleanup3 cleanup4
-else
-FAILING =
-endif
-
-testprogs = cleanup1 cleanup2 $(FAILING) cleanup5
-
-TESTS = $(testprogs)
-
-check_PROGRAMS = $(testprogs)
+tests_pass = cleanup1 cleanup2 cleanup4 cleanup5
+tests_fail = cleanup3
 
 # we have nothing but apps here, we can do this safely
-cleanup1_LDADD = $(GST_LIBS) #-ldmallocth
+cleanup1_LDADD = $(GST_LIBS)
 cleanup1_CFLAGS = $(GST_CFLAGS) $(XML_CFLAGS) $(GLIB_CFLAGS)
 cleanup2_LDADD = $(GST_LIBS) 
 cleanup2_CFLAGS = $(GST_CFLAGS) $(XML_CFLAGS) $(GLIB_CFLAGS)
