--- a/gstreamer/testsuite/clock/Makefile.am
+++ b/gstreamer/testsuite/clock/Makefile.am
@@ -1,12 +1,6 @@
-TOP_BUILDDIR=$(shell cd $(top_builddir) && pwd)
-TESTS_ENVIRONMENT = GST_PLUGIN_PATH=$(TOP_BUILDDIR) GST_REGISTRY=$(TOP_BUILDDIR)/testsuite/test-registry.xml
+include ../Rules
 
-testprogs = clock1 clock2
+tests_pass = clock1 clock2
+tests_fail =
 
-TESTS = $(testprogs)
-
-check_PROGRAMS = $(testprogs)
-
-LDADD = $(GST_LIBS) 
-AM_CFLAGS = $(GST_CFLAGS)
 
