--- a/gstreamer/testsuite/indexers/Makefile.am
+++ b/gstreamer/testsuite/indexers/Makefile.am
@@ -1,11 +1,6 @@
-TOP_BUILDDIR=$(shell cd $(top_builddir) && pwd)
-TESTS_ENVIRONMENT = GST_PLUGIN_PATH=$(TOP_BUILDDIR) GST_REGISTRY=$(TOP_BUILDDIR)/testsuite/test-registry.xml
+include ../Rules
 
-testprogs = cache1 indexdump
+tests_pass = cache1 indexdump
+tests_fail = 
 
-TESTS = $(testprogs)
 
-check_PROGRAMS = $(testprogs)
-
-LDADD = $(GST_LIBS) 
-AM_CFLAGS = $(GST_CFLAGS)
