--- a/gstreamer/testsuite/parse/Makefile.am
+++ b/gstreamer/testsuite/parse/Makefile.am
@@ -1,12 +1,8 @@
+include ../Rules
 
-check_PROGRAMS = parse1 parse2
-
-# parse1 is broken
-TESTS = parse2
+tests_pass = parse2
+tests_fail = parse1
 
 parse1_SOURCES = parse1.c
 parse2_SOURCES = parse2.c
 
-# we have nothing but apps here, we can do this safely
-LIBS = $(GST_LIBS)
-AM_CFLAGS = $(GST_CFLAGS)
