--- a/gst-plugins-bad/ext/xvid/Makefile.am
+++ b/gst-plugins-bad/ext/xvid/Makefile.am
@@ -6,4 +6,4 @@ libgstxvid_la_CFLAGS = $(GST_CFLAGS) $(XVID_CFLAGS)
 libgstxvid_la_LIBADD = $(XVID_LIBS)
 libgstxvid_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 
-noinst_HEADERS = gstxvidenc.h gstxviddec.h
+noinst_HEADERS = gstxvidenc.h gstxviddec.h gstxvid.h
